test/spec/if.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/if.wast
(;; STDOUT ;;;
out/third_party/testsuite/if.wast:183: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:187: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:191: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:195: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:200: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:204: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:208: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:212: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:217: assert_invalid passed:
  error: type mismatch in if, expected [] but got [i32]
  000001e: error: OnEndExpr callback failed
out/third_party/testsuite/if.wast:223: assert_invalid passed:
  error: type mismatch in if, expected [] but got [i32]
  000001e: error: OnEndExpr callback failed
out/third_party/testsuite/if.wast:229: assert_invalid passed:
  error: type mismatch in if false branch, expected [] but got [i32]
  000001f: error: OnEndExpr callback failed
out/third_party/testsuite/if.wast:235: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32]
  000001e: error: OnElseExpr callback failed
out/third_party/testsuite/if.wast:242: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001d: error: OnElseExpr callback failed
out/third_party/testsuite/if.wast:248: assert_invalid passed:
  error: if without else cannot have type signature.
  000001f: error: OnEndExpr callback failed
out/third_party/testsuite/if.wast:254: assert_invalid passed:
  error: if without else cannot have type signature.
  error: type mismatch in if, expected [i32] but got []
  000001d: error: OnEndExpr callback failed
out/third_party/testsuite/if.wast:260: assert_invalid passed:
  error: if without else cannot have type signature.
  000001f: error: OnEndExpr callback failed
out/third_party/testsuite/if.wast:267: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001e: error: OnElseExpr callback failed
out/third_party/testsuite/if.wast:273: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32] but got []
  0000021: error: OnEndExpr callback failed
out/third_party/testsuite/if.wast:279: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001e: error: OnElseExpr callback failed
out/third_party/testsuite/if.wast:286: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got [i64]
  000001f: error: OnElseExpr callback failed
out/third_party/testsuite/if.wast:292: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32] but got [i64]
  0000022: error: OnEndExpr callback failed
out/third_party/testsuite/if.wast:298: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got [i64]
  000001f: error: OnElseExpr callback failed
out/third_party/testsuite/if.wast:304: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got [i64]
  000001f: error: OnElseExpr callback failed
out/third_party/testsuite/if.wast:311: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000025: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:321: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000025: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:331: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000027: error: EndFunctionBody callback failed
out/third_party/testsuite/if.wast:342: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/third_party/testsuite/if.wast:348: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  0000021: error: OnBrExpr callback failed
out/third_party/testsuite/if.wast:354: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/third_party/testsuite/if.wast:363: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  0000021: error: OnBrExpr callback failed
out/third_party/testsuite/if.wast:372: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001f: error: OnBrExpr callback failed
out/third_party/testsuite/if.wast:381: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  0000022: error: OnBrExpr callback failed
out/third_party/testsuite/if.wast:391: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/third_party/testsuite/if.wast:400: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000023: error: OnBrExpr callback failed
out/third_party/testsuite/if.wast:411: assert_malformed passed:
  out/third_party/testsuite/if/if.35.wat:1:14: error: unexpected label "$l"
  (func if end $l)
               ^^
out/third_party/testsuite/if.wast:415: assert_malformed passed:
  out/third_party/testsuite/if/if.36.wat:1:17: error: mismatching label "$a" != "$l"
  (func if $a end $l)
                  ^^
out/third_party/testsuite/if.wast:419: assert_malformed passed:
  out/third_party/testsuite/if/if.37.wat:1:15: error: unexpected label "$l"
  (func if else $l end)
                ^^
out/third_party/testsuite/if.wast:423: assert_malformed passed:
  out/third_party/testsuite/if/if.38.wat:1:18: error: mismatching label "$a" != "$l"
  (func if $a else $l end)
                   ^^
out/third_party/testsuite/if.wast:427: assert_malformed passed:
  out/third_party/testsuite/if/if.39.wat:1:19: error: unexpected label "$l"
  (func if else end $l)
                    ^^
out/third_party/testsuite/if.wast:431: assert_malformed passed:
  out/third_party/testsuite/if/if.40.wat:1:15: error: unexpected label "$l"
  (func if else $l end $l)
                ^^
  out/third_party/testsuite/if/if.40.wat:1:22: error: unexpected label "$l"
  (func if else $l end $l)
                       ^^
out/third_party/testsuite/if.wast:435: assert_malformed passed:
  out/third_party/testsuite/if/if.41.wat:1:15: error: unexpected label "$l1"
  (func if else $l1 end $l2)
                ^^^
  out/third_party/testsuite/if/if.41.wat:1:23: error: unexpected label "$l2"
  (func if else $l1 end $l2)
                        ^^^
out/third_party/testsuite/if.wast:439: assert_malformed passed:
  out/third_party/testsuite/if/if.42.wat:1:22: error: mismatching label "$a" != "$l"
  (func if $a else end $l)
                       ^^
out/third_party/testsuite/if.wast:443: assert_malformed passed:
  out/third_party/testsuite/if/if.43.wat:1:25: error: mismatching label "$a" != "$l"
  (func if $a else $a end $l)
                          ^^
out/third_party/testsuite/if.wast:447: assert_malformed passed:
  out/third_party/testsuite/if/if.44.wat:1:18: error: mismatching label "$a" != "$l"
  (func if $a else $l end $l)
                   ^^
  out/third_party/testsuite/if/if.44.wat:1:25: error: mismatching label "$a" != "$l"
  (func if $a else $l end $l)
                          ^^
82/82 tests passed.
;;; STDOUT ;;)
